--- a/UI/package.json
+++ b/UI/package.json
@@ -13,6 +13,8 @@
     "@element-plus/icons-vue": "^2.3.2",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "^2.4.2",
+    "@tauri-apps/plugin-fs": "^2.4.4",
+    "@tauri-apps/plugin-log": "^2.7.1",
     "@tauri-apps/plugin-opener": "^2.5.2",
     "@tauri-apps/plugin-sql": "^2.3.1",
     "element-plus": "^2.13.0",
