--- a/.github/workflows/build_windows_exe.yml
+++ b/.github/workflows/build_windows_exe.yml
@@ -21,14 +21,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 'lts/*'
-          cache: 'pnpm'
-          cache-dependency-path: './UI/pnpm-lock.yaml'
-
-      - name: Enable pnpm
-        run: corepack enable
+          cache: 'npm'
+          cache-dependency-path: './UI/package-lock.json'
 
       - name: Install frontend dependencies
-        run: cd UI && pnpm install
+        run: cd UI && npm install
 
       - name: Rust setup
         uses: dtolnay/rust-toolchain@stable
