fix(ci): 修复 vcpkg 缓存和安装逻辑
- 移除 'Install vcpkg' 步骤的条件限制，确保 vcpkg 工具总是可用
- 修复 restore-keys 中的平台名称错误 (ubuntu -> windows)
- 解决 OpenCV DLL 复制失败的问题

--- a/.github/workflows/build_windows_exe.yml
+++ b/.github/workflows/build_windows_exe.yml
@@ -47,7 +47,7 @@ jobs:
             C:\vcpkg\downloads
           key: vcpkg-${{ hashFiles('**/Cargo.toml') }}-windows-latest
           restore-keys: |
-            vcpkg-ubuntu-latest-
+            vcpkg-windows-latest-
 
       - name: Cache Rust
         uses: swatinem/rust-cache@v2
@@ -57,9 +57,10 @@ jobs:
             ./Server -> target
 
       - name: Install vcpkg
-        if: steps.vcpkg-cache.outputs.cache-hit != 'true'
         run: |
-          git clone https://github.com/Microsoft/vcpkg.git C:\vcpkg
+          if (-not (Test-Path "C:\vcpkg")) {
+            git clone https://github.com/Microsoft/vcpkg.git C:\vcpkg
+          }
           C:\vcpkg\bootstrap-vcpkg.bat
 
       - name: Install OpenCV via vcpkg
