--- a/.github/workflows/build_windows_exe.yml
+++ b/.github/workflows/build_windows_exe.yml
@@ -109,6 +109,7 @@ jobs:
           }
 
       - name: Copy OpenCV DLL
+        if: steps.vcpkg-cache.outputs.cache-hit != 'true'
         run: |
           Copy-Item "C:\vcpkg\installed\x64-windows-static\bin\opencv_world*.dll" -Destination "UI\src-tauri\resources\"
 
