--- a/.github/workflows/build_windows_exe.yml
+++ b/.github/workflows/build_windows_exe.yml
@@ -64,9 +64,10 @@ jobs:
           C:\vcpkg\bootstrap-vcpkg.bat
 
       - name: Install OpenCV via vcpkg
-        if: steps.vcpkg-cache.outputs.cache-hit != 'true'
         run: |
-          C:\vcpkg\vcpkg install opencv:x64-windows-static
+          if (-not (Test-Path "C:\vcpkg\installed\x64-windows-static\bin\opencv_world*.dll")) {
+            C:\vcpkg\vcpkg install opencv:x64-windows-static
+          }
           C:\vcpkg\vcpkg integrate install
 
       - name: Install frontend dependencies
@@ -109,9 +110,13 @@ jobs:
           }
 
       - name: Copy OpenCV DLL
-        if: steps.vcpkg-cache.outputs.cache-hit != 'true'
         run: |
-          Copy-Item "C:\vcpkg\installed\x64-windows-static\bin\opencv_world*.dll" -Destination "UI\src-tauri\resources\"
+          if (Test-Path "C:\vcpkg\installed\x64-windows-static\bin\opencv_world*.dll") {
+            Copy-Item "C:\vcpkg\installed\x64-windows-static\bin\opencv_world*.dll" -Destination "UI\src-tauri\resources\"
+            Write-Host "OpenCV DLL 复制成功"
+          } else {
+            Write-Host "警告: OpenCV DLL 未找到，跳过复制步骤" -ForegroundColor Yellow
+          }
 
       - name: Build Tauri app
         uses: tauri-apps/tauri-action@v0
