--- a/.github/workflows/build_windows_exe.yml
+++ b/.github/workflows/build_windows_exe.yml
@@ -14,6 +14,7 @@ permissions:
 env:
   VCPKG_ROOT: C:\vcpkg
   VCPKG_DEFAULT_BINARY_CACHE: C:\vcpkg\archives
+  VCPKGRS_TRIPLET: x64-windows-static
   OPENCV_DISABLE_PROBES: pkg_config,cmake
 
 jobs:
@@ -124,6 +125,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VCPKG_ROOT: C:\vcpkg
           VCPKG_INSTALLED_DIR: C:\vcpkg\installed
+          VCPKGRS_TRIPLET: x64-windows-static
           RUSTFLAGS: -C link-args=/DEFAULTLIB:libcmt.lib
         with:
           projectPath: './UI'
