--- a/.github/workflows/build_windows_exe.yml
+++ b/.github/workflows/build_windows_exe.yml
@@ -15,7 +15,6 @@ env:
   VCPKG_ROOT: C:\vcpkg
   VCPKG_DEFAULT_BINARY_CACHE: C:\vcpkg\archives
   VCPKGRS_TRIPLET: x64-windows-static
-  OPENCV_DISABLE_PROBES: pkg_config,cmake
 
 jobs:
   build-windows:
@@ -82,6 +81,9 @@ jobs:
             $opencvConfig = Join-Path $opencvDir "share\opencv4\OpenCVConfig.cmake"
             if (Test-Path $opencvConfig) {
               Write-Host "找到 OpenCVConfig.cmake" -ForegroundColor Green
+              Write-Host "设置 OpenCV_DIR 环境变量" -ForegroundColor Cyan
+              "$opencvDir\share\opencv4" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+              Write-Host "OpenCV_DIR=$opencvDir\share\opencv4"
             } else {
               Write-Host "警告: 未找到 OpenCVConfig.cmake" -ForegroundColor Yellow
             }
@@ -145,6 +147,7 @@ jobs:
           VCPKG_ROOT: C:\vcpkg
           VCPKG_INSTALLED_DIR: C:\vcpkg\installed
           VCPKGRS_TRIPLET: x64-windows-static
+          OpenCV_DIR: C:\vcpkg\installed\x64-windows-static\share\opencv4
           RUSTFLAGS: -C link-args=/DEFAULTLIB:libcmt.lib
         with:
           projectPath: './UI'
