--- a/.github/workflows/build_windows_exe.yml
+++ b/.github/workflows/build_windows_exe.yml
@@ -64,33 +64,7 @@ jobs:
           C:\vcpkg\bootstrap-vcpkg.bat
 
       - name: Install OpenCV via vcpkg
-        run: |
-          Write-Host "开始安装 OpenCV..." -ForegroundColor Cyan
-          C:\vcpkg\vcpkg install opencv:x64-windows-static
-          C:\vcpkg\vcpkg integrate install
-          Write-Host "OpenCV 安装完成" -ForegroundColor Green
-
-      - name: Verify OpenCV installation
-        run: |
-          Write-Host "验证 OpenCV 安装..." -ForegroundColor Cyan
-          $opencvDll = Get-Item "C:\vcpkg\installed\x64-windows-static\bin\opencv_world*.dll" -ErrorAction SilentlyContinue
-          if ($opencvDll) {
-            Write-Host "找到 OpenCV DLL: $($opencvDll.Name)" -ForegroundColor Green
-            $opencvDir = Split-Path (Split-Path $opencvDll.FullName -Parent) -Parent
-            Write-Host "OpenCV 安装目录: $opencvDir" -ForegroundColor Green
-            $opencvConfig = Join-Path $opencvDir "share\opencv4\OpenCVConfig.cmake"
-            if (Test-Path $opencvConfig) {
-              Write-Host "找到 OpenCVConfig.cmake" -ForegroundColor Green
-              Write-Host "设置 OpenCV_DIR 环境变量" -ForegroundColor Cyan
-              "$opencvDir\share\opencv4" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-              Write-Host "OpenCV_DIR=$opencvDir\share\opencv4"
-            } else {
-              Write-Host "警告: 未找到 OpenCVConfig.cmake" -ForegroundColor Yellow
-            }
-          } else {
-            Write-Host "错误: 未找到 OpenCV DLL" -ForegroundColor Red
-            exit 1
-          }
+        run: python scripts/install_opencv.py
 
       - name: Install frontend dependencies
         run: cd UI && npm install
