fix(ci): 创建 VCPKG_DEFAULT_BINARY_CACHE 目录
- 添加创建 vcpkg 二进制缓存目录的步骤
- 修复 'VCPKG_DEFAULT_BINARY_CACHE must be a directory' 错误
- 使用 New-Item -Force 确保目录存在，如果已存在则不报错

--- a/.github/workflows/build_windows_exe.yml
+++ b/.github/workflows/build_windows_exe.yml
@@ -63,6 +63,11 @@ jobs:
           }
           C:\vcpkg\bootstrap-vcpkg.bat
 
+      - name: Create vcpkg binary cache directory
+        run: |
+          New-Item -ItemType Directory -Force -Path "C:\vcpkg\archives" | Out-Null
+          Write-Host "Created vcpkg binary cache directory: C:\vcpkg\archives"
+
       - name: Install OpenCV via vcpkg
         run: python scripts/install_opencv.py
 
