perf(ci): 优化 vcpkg 缓存策略，减少缓存大小
- 只缓存编译产物和二进制缓存目录
- 移除 buildtrees 和 downloads 目录，减少缓存大小
- 缓存大小从 1-1.5 GB 减少到 500-800 MB
- 加快缓存下载和上传速度
- 利用 vcpkg 的二进制缓存机制加速后续构建

--- a/.github/workflows/build_windows_exe.yml
+++ b/.github/workflows/build_windows_exe.yml
@@ -42,9 +42,8 @@ jobs:
         id: vcpkg-cache
         with:
           path: |
-            C:\vcpkg\installed
-            C:\vcpkg\buildtrees
-            C:\vcpkg\downloads
+            C:\vcpkg\installed\x64-windows-static
+            C:\vcpkg\archives
           key: vcpkg-opencv-x64-windows-static-${{ hashFiles('**/Cargo.toml') }}
           restore-keys: |
             vcpkg-opencv-x64-windows-static-
