fix(ci): 修复静态链接版本的 OpenCV 验证逻辑
- install_opencv.py: 根据 triplet 类型验证相应的库文件（静态链接验证 .lib，动态链接验证 .dll）
- build_windows_exe.yml: 更新说明，明确 x64-windows-static 是静态链接版本，无需复制 DLL

修复原因：x64-windows-static triplet 使用静态链接，不会生成 DLL 文件，
之前的验证逻辑错误地要求 DLL 文件存在。

--- a/.github/workflows/build_windows_exe.yml
+++ b/.github/workflows/build_windows_exe.yml
@@ -111,12 +111,10 @@ jobs:
 
       - name: Copy OpenCV DLL
         run: |
-          if (Test-Path "C:\vcpkg\installed\x64-windows-static\bin\opencv_world*.dll") {
-            Copy-Item "C:\vcpkg\installed\x64-windows-static\bin\opencv_world*.dll" -Destination "UI\src-tauri\resources\"
-            Write-Host "OpenCV DLL 复制成功"
-          } else {
-            Write-Host "警告: OpenCV DLL 未找到，跳过复制步骤" -ForegroundColor Yellow
-          }
+          # x64-windows-static 是静态链接版本，OpenCV 已静态链接到可执行文件中，不需要复制 DLL
+          # 如果需要使用动态链接版本，请将 VCPKGRS_TRIPLET 改为 x64-windows
+          Write-Host "使用静态链接版本 (x64-windows-static)，OpenCV 已编译到可执行文件中" -ForegroundColor Cyan
+          Write-Host "跳过 DLL 复制步骤" -ForegroundColor Yellow
 
       - name: Build Tauri app
         uses: tauri-apps/tauri-action@v0
