fix(ci): 修复 OpenCV 动态链接版本验证失败问题
- 更新 install_opencv.py 验证逻辑，支持模块化 DLL 文件（opencv_core4.dll 等）
- 更新 CI workflow 中的 DLL 复制逻辑，兼容 opencv_world.dll 和模块化 DLL
- 在 build.rs 中配置 OPENCV_LINK_LIBS=dylib 确保使用动态链接
- 在 CI 构建步骤中添加 OPENCV_LINK_LIBS 环境变量

修复原因：
- OpenCV 4.12.0 动态链接版本使用模块化 DLL 文件命名（opencv_core4.dll 等）
- 而非 opencv_world4120.dll 的命名格式
- 之前的验证逻辑只检查 opencv_world*.dll，导致验证失败

--- a/.github/workflows/build_windows_exe.yml
+++ b/.github/workflows/build_windows_exe.yml
@@ -123,13 +123,34 @@ jobs:
             New-Item -ItemType Directory -Force -Path $resourcesDir | Out-Null
           }
 
-          # 复制所有 OpenCV DLL
-          $opencvDlls = Get-ChildItem -Path $opencvBinDir -Filter "opencv_world*.dll"
-          foreach ($dll in $opencvDlls) {
-            Write-Host "  复制 $($dll.Name)..." -ForegroundColor Yellow
-            Copy-Item -Path $dll.FullName -Destination $resourcesDir -Force
-            # 同时复制到 target/release 目录，确保运行时能找到
-            Copy-Item -Path $dll.FullName -Destination $targetDir -Force
+          # 首先尝试查找 opencv_world*.dll（合并版本）
+          $opencvWorldDlls = Get-ChildItem -Path $opencvBinDir -Filter "opencv_world*.dll" -ErrorAction SilentlyContinue
+
+          if ($opencvWorldDlls.Count -gt 0) {
+            # 使用 opencv_world*.dll
+            foreach ($dll in $opencvWorldDlls) {
+              Write-Host "  复制 $($dll.Name)..." -ForegroundColor Yellow
+              Copy-Item -Path $dll.FullName -Destination $resourcesDir -Force
+              # 同时复制到 target/release 目录，确保运行时能找到
+              Copy-Item -Path $dll.FullName -Destination $targetDir -Force
+            }
+          } else {
+            # 使用模块化 DLL（opencv_*.dll）
+            $opencvModuleDlls = Get-ChildItem -Path $opencvBinDir -Filter "opencv_*.dll" | Where-Object {
+              $_.Name -match "^opencv_(core|imgproc|highgui|imgcodecs|video|videoio|dnn|features2d|calib3d|objdetect|ml|photo|flann|stitching)\d+\.dll$"
+            }
+
+            Write-Host "  找到 $($opencvModuleDlls.Count) 个 OpenCV 模块 DLL" -ForegroundColor Cyan
+            foreach ($dll in $opencvModuleDlls) {
+              Write-Host "  复制 $($dll.Name)..." -ForegroundColor Yellow
+              Copy-Item -Path $dll.FullName -Destination $resourcesDir -Force
+              # 同时复制到 target/release 目录，确保运行时能找到
+              Copy-Item -Path $dll.FullName -Destination $targetDir -Force
+            }
+
+            if ($opencvModuleDlls.Count -eq 0) {
+              Write-Host "  警告: 未找到任何 OpenCV DLL 文件" -ForegroundColor Yellow
+            }
           }
 
           # 复制依赖的 DLL（如果有的话）
@@ -153,6 +174,7 @@ jobs:
           VCPKG_INSTALLED_DIR: C:\vcpkg\installed
           VCPKGRS_TRIPLET: x64-windows
           OpenCV_DIR: C:\vcpkg\installed\x64-windows\share\opencv4
+          OPENCV_LINK_LIBS: dylib
         with:
           projectPath: './UI'
           tagName: v__VERSION__
