fix(ci): 在复制 OpenCV DLL 前创建 target/release 目录
修复错误：Copy-Item 找不到路径 'UI\src-tauri\target\release'
因为该目录在构建前不存在，需要提前创建

--- a/.github/workflows/build_windows_exe.yml
+++ b/.github/workflows/build_windows_exe.yml
@@ -122,6 +122,9 @@ jobs:
           if (-not (Test-Path $resourcesDir)) {
             New-Item -ItemType Directory -Force -Path $resourcesDir | Out-Null
           }
+          if (-not (Test-Path $targetDir)) {
+            New-Item -ItemType Directory -Force -Path $targetDir | Out-Null
+          }
 
           # 首先尝试查找 opencv_world*.dll（合并版本）
           $opencvWorldDlls = Get-ChildItem -Path $opencvBinDir -Filter "opencv_world*.dll" -ErrorAction SilentlyContinue
