fix(ci): 扩展 OpenCV 依赖库复制列表，添加所有必需的第三方库
- 添加 WebP 相关库 (libwebp*.dll)
- 添加 JPEG 库 (jpeg*.dll)
- 添加 PNG 库 (libpng*.dll)
- 添加 TIFF 库 (tiff*.dll)
- 添加其他图像编解码依赖 (libopenjp2, libprotobuf, liblzma, zstd 等)
- 确保所有依赖库都被复制到可执行文件目录，避免运行时找不到 DLL

--- a/.github/workflows/build_windows_exe.yml
+++ b/.github/workflows/build_windows_exe.yml
@@ -150,7 +150,21 @@ jobs:
           }
 
           # 复制依赖的 DLL（如果有的话）
-          $depDlls = @("libcrypto*.dll", "libssl*.dll", "zlib*.dll")
+          $depDlls = @(
+            "libcrypto*.dll",
+            "libssl*.dll",
+            "zlib*.dll",
+            "libwebp*.dll",
+            "jpeg*.dll",
+            "libpng*.dll",
+            "tiff*.dll",
+            "libopenjp2*.dll",
+            "libprotobuf*.dll",
+            "liblzma*.dll",
+            "zstd*.dll",
+            "libiconv*.dll",
+            "libintl*.dll"
+          )
           foreach ($pattern in $depDlls) {
             $depFiles = Get-ChildItem -Path $opencvBinDir -Filter $pattern -ErrorAction SilentlyContinue
             foreach ($file in $depFiles) {
@@ -236,7 +250,21 @@ jobs:
               }
 
               # 复制依赖的 DLL
-              $depDlls = @("libcrypto*.dll", "libssl*.dll", "zlib*.dll")
+              $depDlls = @(
+                "libcrypto*.dll",
+                "libssl*.dll",
+                "zlib*.dll",
+                "libwebp*.dll",
+                "jpeg*.dll",
+                "libpng*.dll",
+                "tiff*.dll",
+                "libopenjp2*.dll",
+                "libprotobuf*.dll",
+                "liblzma*.dll",
+                "zstd*.dll",
+                "libiconv*.dll",
+                "libintl*.dll"
+              )
               foreach ($pattern in $depDlls) {
                 $depFiles = Get-ChildItem -Path $resourcesDir -Filter $pattern -ErrorAction SilentlyContinue
                 foreach ($file in $depFiles) {
